Fixed Stretchy SHit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1808,7 +1808,7 @@ footer {
 .hero-v1-content .banner-quickly-thumb img {
   border-radius: 1000px;
   width: 100%; 
-    max-width: 1584px; 
+    max-width: 1442px; 
     height: auto; 
 }
 .hero-v1-content .hero-arrow {
